[package]
name = "parson"
version = "1.1.0"
edition = "2021"
description = "A crate for parsing JSON into Rust types"
documentation = "https://www.github.com/zS1L3NT/rs-parson"
repository = "https://www.github.com/zS1L3NT/rs-parson"
license = "GPL-3.0"
keywords = ["json", "parser"]
categories = ["parser-implementations", "parsing"]

[dependencies]
indexmap = "1.8.0"